--- a/css/product_details.css
+++ b/css/product_details.css
@@ -36,7 +36,6 @@
     cursor: pointer;
     border-radius: 5px;
     padding: 4px;
-    /* border: 2px solid gray; */
 }
 
 .active-image {
@@ -111,4 +110,14 @@
     line-height: 1.3;
     font-weight: 400;
     color: rgba(0, 0, 0, 0.6);
+}
+
+@media screen and (max-width:900px){
+    .product-wrapper{
+        flex-direction: column;
+    }
+
+    #product-image, #product-details{
+        width: 100%;
+    }
 }
