--- a/css/common.css
+++ b/css/common.css
@@ -18,6 +18,23 @@ body {
     padding: 16px 8%
 }
 
+#responsive-menu{
+    display: none;
+    background-color: #fff;
+    height: 100vh;
+    box-shadow: 4px 4px 4px #999;
+    flex-direction: column;
+    margin-right: 20px;
+    font-size: 20px;
+    position: fixed;
+    left: 0;
+    top: 60px;
+    padding: 10px 10px 0px 35px;
+    transition: all 5s;
+}
+#logo1{
+    display: none;
+}
 #left-menu {
     display: inline-flex;
     justify-content: start;
@@ -96,7 +113,6 @@ body {
     background-color: #009688;
     color: white;
     border-radius: 50%;
-
     position: absolute;
     top: -12px;
     right: -12px;
@@ -118,7 +134,7 @@ body {
     border-radius: 50%;
 }
 
-#menu-dropdown{
+#menu-dropdown, #responsive-menu{
     display: none;
 }
 
@@ -177,7 +193,7 @@ footer > div:first-of-type {
 
 @media screen and (max-width:900px){
     #menu-dropdown{
-        display: block;
+        display: flex;
         margin-right: 20px;
         font-size: 20px;
     }
@@ -186,6 +202,45 @@ footer > div:first-of-type {
         display: none;
     }
 
+    .res-nav-link{
+        text-decoration: none;
+        margin: 4px 0;
+        color: black;
+        text-transform: uppercase;
+        font-weight: 600;
+    }
+
+    #res-search-wrapper {
+        margin-top: 5px;
+        width: 100%;
+        max-width: 400px;
+        position: relative;
+    }
+    
+    #res-search-wrapper > i {
+        position: absolute;
+        color: #999;
+        font-size: 18px;
+        top: 50%;
+        left: 18px;
+        transform: translateY(-50%);
+    }
+    #logo1{
+        display: flex;
+        font-size: 36px;
+        text-transform: uppercase;
+        font-weight: 400;
+        margin-right: 16px;
+    }
+    #logo1 > a{
+        text-decoration: none;
+        color: black;
+        cursor: pointer;
+    }
+    #logo1 span {
+        font-weight: 800;
+    }
+    
     footer{
         flex-direction: column;
     }
